# mlx-week5

Oleksandr/: alex-simple-model.ipynb  padding-2.ipynb  padding-3.ipynb  padding-4.ipynb  padding-5.ipynb  padding-6.ipynb  padding-7.ipynb  padding-8.ipynb  padding.ipynb  recovery.ipynb  simple_transformer.py  spm_0000_text_model.model  spm_0000_text_model.vocab  spm_05_text_model.model  spm_05_text_model.vocab  tranformet 2.ipynb  tranformet.ipynb
models/: tiny_stories_tokenizer.model
sid/: pyproject.toml
sid/notebooks/: test.md  transformer.ipynb
sid/src/mlx_week5/: dataset.py
train/: 0000.parquet  0001.parquet  0002.parquet  0003.parquet
validate/: 0000.parquet
